// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table client {
  id integer [primary key]
  nom varchar(255) [not null]
}

Table projet {
  id integer [primary key]
  client_id integer [not null]
  nom varchar(255) [not null]
}

Table devis {
  id integer [primary key]
  version int [not null]
  reference varchar(10) [not null]
  prix float [not null]
  projet_id int [not null]
}

Table facture {
  id integer [primary key]
  reference varchar(10) [not null]
  info varchar(255) [not null]
  total float [not null]
  date_crea date [not null]
  date_paiement date
  devis_id int [not null]
}

Ref: client.id < projet.client_id
Ref: projet.id < devis.projet_id
Ref: devis.id < facture.devis_id